--- a/histoire.html
+++ b/histoire.html
@@ -20,7 +20,8 @@
         <header class="headerNavbar">
             <nav class="navbar">
 
-                <img src="./images/flag.svg" alt="Drapeau de l'Argentine" class="logo">
+                <a href="fansite3.html"><img src="./images/flag.svg" 
+                    alt="Drapeau de l'Argentine" class="logo"></a>
                 <h1>La Scaloneta</h1>
 
                 <button class="openbtn" onclick="openNav()">☰</button>  
@@ -122,7 +123,8 @@
                         laissant de côté deux habitués du cycle, Dybala et Ocampos.
                         L'équipe dirigée par Lionel Scaloni formait le groupe A avec l'Uruguay, 
                         le Paraguay, le Chili et la Bolivie.
-                        <img src="./Images/scaloni_copa_america21.jpg" class="paysage left scaloni">
+                        <img src="./Images/scaloni_copa_america21.jpg" 
+                        alt="Scaloni jetté en l'air par son équipe" class="paysage left scaloni">
                         Leur classement en première position les a amenés à se retrouver en quarts 
                         de finale avec l'Équateur, qui occupait la quatrième position du groupe B. 
                         Le match s'est joué le 3 juillet et s'est terminé par une victoire 
@@ -178,7 +180,7 @@
                         du meilleur joueur de la compétition, étant le seul footballeur à avoir 
                         obtenu cet exploit à deux reprises (le précédent était finaliste en 2014).
                         <img src="./Images/trofeos_mundial.jpg" 
-                        alt="Messi, Dibu et Fernandez avec leur tophées" class="trofeos left">
+                        alt="Messi, Dibu et Fernandez avec leurs trophées" class="trofeos left">
                         Il a également remporté le Soulier d'Argent en tant que deuxième meilleur 
                         buteur, à un but de Mbappé. De son côté, Emiliano Martínez a remporté 
                         le Gant d'Or du meilleur gardien et Enzo Fernández le prix du meilleur 
@@ -188,7 +190,7 @@
                     <p>Le travail de Lionel Scaloni a été souligné dans la presse sportive pour 
                         sa flexibilité dans l'adaptation de la stratégie aux exigences de chaque 
                         rival, 
-                        <img src="./Images/scaloni_copa_mundo.webp" alt="Scalino soulevant la Coupe du monde"
+                        <img src="./Images/scaloni_copa_mundo.webp" alt="Scaloni soulevant la Coupe du monde"
                         class="trofeos right">
                         sans avoir recours à un entraînement répété ou à une approche tactique 
                         dans aucun des sept matches de la Coupe du monde. D'autre part, la lucidité 
@@ -214,7 +216,7 @@
                 <article class="america24">
                     <h2>Copa América 2024</h2>
                     <img src="./Images/copa_america24.jpg" 
-                        alt="L'Argentine championne de la Copa América en 2024" class="center">
+                        alt="L'Argentine championne de la Copa América 2024" class="center">
                     <p>L'équipe argentine a commencé sa participation à la Copa América 2024 
                         organisée aux États-Unis en tant que championne en titre. L'équipe de 
                         Scaloni a remporté son groupe (Groupe A) qu'elle partageait avec le Canada, 
@@ -274,6 +276,25 @@
                         <li><a href="histoire.html">Un peu d'histoire</a></li>
                         <li><a href="worldcup.html">FIFA World Cup 2022</a></li>
                         <li><a href="phenomene.html">Le phénomène social</a></li>
+                    </ul>
+                </article>
+
+                <article class="menuReseaux">
+                    <ul class="icon">
+                        <li><a href="https://www.afa.com.ar/es/" target="_blank"><img 
+                            src="./Images/afa.png" alt="logo Afa" class="redes"></a></li>
+                        <li><a href="https://www.conmebol.com/" target="_blank"><img 
+                            src="./Images/conmebol.png" alt="logo Conmebol" class="redes"></a></li>
+                        <li><a href="https://www.instagram.com/afaseleccion/" target="_blank"><img 
+                            src="./Images/instagram.svg" alt="logo Instagram" class="redes"></a></li>
+                    </ul>
+                    <ul class="icon">
+                        <li><a href="https://www.facebook.com/AFASeleccionArgentina" target="_blank"><img 
+                            src="./Images/facebook.svg" alt="logo Facebook" class="redes"></a></li>
+                        <li><a href="https://www.youtube.com/@AFASeleccion" target="_blank"><img 
+                            src="./Images/youtube.svg" alt="logo Youtube" class="redes"></a></li>
+                        <li><a href="https://www.tiktok.com/@afaseleccion" target="_blank"><img 
+                            src="./Images/tiktok.svg" alt="logo Tiktok" class="redes"></a></li>
                     </ul>
                 </article>
 
