--- a/phenomene.html
+++ b/phenomene.html
@@ -20,7 +20,8 @@
         <header class="headerNavbar">
             <nav class="navbar">
 
-                <img src="./images/flag.svg" alt="Drapeau de l'Argentine" class="logo">
+                <a href="fansite3.html"><img src="./images/flag.svg" 
+                    alt="Drapeau de l'Argentine" class="logo"></a>
                 <h1>La Scaloneta</h1>
 
                 <button class="openbtn" onclick="openNav()">☰</button>  
@@ -268,6 +269,25 @@
                         <li><a href="histoire.html">Un peu d'histoire</a></li>
                         <li><a href="worldcup.html">FIFA World Cup 2022</a></li>
                         <li><a href="phenomene.html">Le phénomène social</a></li>
+                    </ul>
+                </article>
+
+                <article class="menuReseaux">
+                    <ul class="icon">
+                        <li><a href="https://www.afa.com.ar/es/" target="_blank"><img 
+                            src="./Images/afa.png" alt="logo Afa" class="redes"></a></li>
+                        <li><a href="https://www.conmebol.com/" target="_blank"><img 
+                            src="./Images/conmebol.png" alt="logo Conmebol" class="redes"></a></li>
+                        <li><a href="https://www.instagram.com/afaseleccion/" target="_blank"><img 
+                            src="./Images/instagram.svg" alt="logo Instagram" class="redes"></a></li>
+                    </ul>
+                    <ul class="icon">
+                        <li><a href="https://www.facebook.com/AFASeleccionArgentina" target="_blank"><img 
+                            src="./Images/facebook.svg" alt="logo Facebook" class="redes"></a></li>
+                        <li><a href="https://www.youtube.com/@AFASeleccion" target="_blank"><img 
+                            src="./Images/youtube.svg" alt="logo Youtube" class="redes"></a></li>
+                        <li><a href="https://www.tiktok.com/@afaseleccion" target="_blank"><img 
+                            src="./Images/tiktok.svg" alt="logo Tiktok" class="redes"></a></li>
                     </ul>
                 </article>
 
