--- a/worldcup.html
+++ b/worldcup.html
@@ -20,7 +20,8 @@
         <header class="headerNavbar">
             <nav class="navbar">
 
-                <img src="./images/flag.svg" alt="Drapeau de l'Argentine" class="logo">
+                <a href="fansite3.html"><img src="./images/flag.svg" 
+                    alt="Drapeau de l'Argentine" class="logo"></a>
                 <h1>La Scaloneta</h1>
 
                 <button class="openbtn" onclick="openNav()">☰</button>  
@@ -42,7 +43,8 @@
             <section class="carousel-container">
                 <div class="carousel-slide">
                     <h2>Lionel Scaloni</h2>
-                    <img src="./Images/Equipe/DT Scaloni 01 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/DT Scaloni 01 avec arrière-plan supprimé.png" 
+                    alt="Lionel Scaloni">
                     Né le 16 mai 1978 
                     à Rosario, il est devenu entraîneur en 2016 et est nommé en 2018 sélectionneur 
                     de l'Argentine avec laquelle il remporte la Copa América 2021 et 2024 
@@ -50,7 +52,8 @@
                 </div>
                 <div class="carousel-slide">
                     <h2>1 - Franco Armani</h2>
-                    <img src="./Images/Equipe/1 Armani 01 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/1 Armani 01 avec arrière-plan supprimé.png" 
+                    alt="Franco Armani">
                     Né le 16 octobre 1986 
                     à Casilda, il joue au poste de gardien au sein de River Plate. 
                     Il honore sa première sélection avec L'Albiceleste lors du troisième match de 
@@ -58,7 +61,8 @@
                 </div>
                 <div class="carousel-slide">
                     <h2>2 - Juan Foyth</h2>
-                    <img src="./Images/Equipe/2 Foyth 01 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/2 Foyth 01 avec arrière-plan supprimé.png" 
+                    alt="Juan Foyth">
                     Né le 12 janvier 
                     1998 à La Plata, il évolue au poste de défenseur à Villarreal. 
                     Le 16 novembre 2018, il honore sa première sélection avec l'équipe 
@@ -66,14 +70,16 @@
                 </div>
                 <div class="carousel-slide">
                     <h2>3 - Nicolás Tagliafico</h2>
-                    <img src="./Images/Equipe/3 Tagliafico 02 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/3 Tagliafico 02 avec arrière-plan supprimé.png" 
+                    alt="Nicolás Tagliafico">
                     Né le 31 août 1992 
                     à Rafael Calzada, il joue au poste de défenseur à l'Olympique lyonnais. 
                     Il joue son premier match en équipe d'Argentine le 9 juin 2017, en amical 
                     contre le Brésil.</div>
                 <div class="carousel-slide">
                     <h2>4 - Gonzalo Montiel</h2>
-                    <img src="./Images/Equipe/4 Montiel 02 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/4 Montiel 02 avec arrière-plan supprimé.png"
+                    alt="Gonzalo Montiel">
                     Né le 1er janvier 
                     1997 à González Catán, il évolue actuellement au 
                     poste d'arrière droit au Séville FC. En mars 2019, il fait partie de la liste 
@@ -81,14 +87,16 @@
                 </div>
                 <div class="carousel-slide">
                     <h2>5 - Leandro Paredes</h2>
-                    <img src="./Images/Equipe/5 Paredes 01 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/5 Paredes 01 avec arrière-plan supprimé.png"
+                    alt="Leandro Paredes">
                     Né le 29 juin 1994 
                     à San Justo, il évolue au poste de milieu de terrain à l'AS Roma. Le 13 juin 2017, 
                     Paredes est lancé par Jorge Sampaoli pour sa première sélection en équipe 
                     d'Argentine contre Singapour.</div>
                 <div class="carousel-slide">
                     <h2>6 - Germán Pezzella</h2>
-                    <img src="./Images/Equipe/6 Pezzella 01 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/6 Pezzella 01 avec arrière-plan supprimé.png"
+                    alt="Germán Pezzella">
                     Né le 27 juin 1991 
                     à Bahía Blanca, il évolue au poste de défenseur central à River Plate. 
                     Le 11 novembre 2022, il est sélectionné par Scaloni pour participer à 
@@ -96,7 +104,8 @@
                 </div>
                 <div class="carousel-slide">
                     <h2>7 - Rodrigo De Paul</h2>
-                    <img src="./Images/Equipe/7 De Paul 01 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/7 De Paul 01 avec arrière-plan supprimé.png"
+                    alt="Rodrigo De Paul">
                     Né le 24 mai 1994 
                     à Sarandí, il joue au poste de milieu de terrain à l'Atlético de Madrid. 
                     Le 11 octobre 2018, il honore sa première sélection avec l'Équipe 
@@ -104,28 +113,32 @@
                 </div>
                 <div class="carousel-slide">
                     <h2>8 - Marcos Acuña</h2>
-                    <img src="./Images/Equipe/8 Acun¦âa 01 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/8 Acun¦âa 01 avec arrière-plan supprimé.png"
+                    alt="Marcos Acuña">
                     "Huevo" né le 28 octobre 
                     1991 à Zapala, il évolue au poste d'ailier ou d'arrière gauche à 
                     River Plate. Il reçoit sa première sélection en équipe d'Argentine 
                     le 15 novembre 2016 contre la Colombie.</div>
                 <div class="carousel-slide">
                     <h2>9 - Julián Álvarez</h2>
-                    <img src="./Images/Equipe/9 Alvarez 01 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/9 Alvarez 01 avec arrière-plan supprimé.png"
+                    alt="Julián Álvarez">
                     "Araña" né le 31 
                     janvier 2000 à Calchín, il joue au poste d'attaquant à l'Atlético 
                     de Madrid. Le 16 mai 2021, il est retenu par l'équipe d'Argentine pour 
                     disputer la Coupe du monde 2022. </div>
                 <div class="carousel-slide">
                     <h2>10 - Lionel Messi</h2>
-                    <img src="./Images/Equipe/10 Messi 02 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/10 Messi 02 avec arrière-plan supprimé.png"
+                    alt="Lionel Messi">
                     "La Pulga" né le 24 
                     juin 1987 à Rosario, il joue au poste d'attaquant à l’Inter Miami CF. 
                     Le 17 août 2005, Lionel Messi fait ses débuts pour la première fois avec 
                     la sélection de l’Argentine face à la Hongrie</div>
                 <div class="carousel-slide">
                     <h2>11 - Ángel Di María</h2>
-                    <img src="./Images/Equipe/11 Di Maria 04 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/11 Di Maria 04 avec arrière-plan supprimé.png"
+                    alt="Ángel Di María">
                     "Fideo" né le 14 février 
                     1988 à Rosario, il évolue au poste de milieu offensif ou d'ailier au 
                     Benfica Lisbonne. Le 6 septembre 2008, Di María fait ses débuts lors d'un match contre 
@@ -133,21 +146,24 @@
                 </div>
                 <div class="carousel-slide">
                     <h2>12 - Gerónimo Rulli</h2>
-                    <img src="./Images/Equipe/12 Rulli 02 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/12 Rulli 02 avec arrière-plan supprimé.png"
+                    alt="Gerónimo Rulli">
                     Né le 20 mai 1992 
                     à La Plata, il évolue au poste de gardien de but à l'Olympique de 
                     Marseille. Le 20 mars 2015, il est convoqué avec la sélection argentine 
                     pour jouer les matchs contre le Salvador et l'Équateur.</div>
                 <div class="carousel-slide">
                     <h2>13 - Cristian Romero</h2>
-                    <img src="./Images/Equipe/13 Romero 01 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/13 Romero 01 avec arrière-plan supprimé.png"
+                    alt="Cristian Romero">
                     "Cuti" né le 27 
                     avril 1998 à Córdoba, il évolue actuellement au poste de défenseur 
                     central à Tottenham Hotspur. Il honore sa première sélection avec l'équipe 
                     nationale d'Argentine le 4 juin 2021.</div>
                 <div class="carousel-slide">
                     <h2>14 - Exequiel Palacios</h2>
-                    <img src="./Images/Equipe/14 Palacios 03 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/14 Palacios 03 avec arrière-plan supprimé.png"
+                    alt="Exequiel Palacios">
                     Né le 5 octobre 
                     1998 à Famaillá, il évolue au poste de milieu de terrain au sein du 
                     club du Bayer Leverkusen. C'est le 7 septembre 2018 qu'il joue son premier 
@@ -155,26 +171,30 @@
                 </div>
                 <div class="carousel-slide">
                     <h2>15 - Ángel Martínez</h2>
-                    <img src="./Images/Equipe/15 Correa 01 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/15 Correa 01 avec arrière-plan supprimé.png"
+                    alt="Ángel Martínez">
                     Né le 9 mars 1995 
                     à Rosario, il évolue au poste d'attaquant à l'Atlético de Madrid. 
                     Le 25 août 2015, sa première convocation pour l'équipe nationale senior a eu lieu.</div>
                 <div class="carousel-slide">
                     <h2>16 - Thiago Almada</h2>
-                    <img src="./Images/Equipe/16 Almada 02 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/16 Almada 02 avec arrière-plan supprimé.png"
+                    alt="Thiago Almada">
                     Né le 26 avril 2001 à 
                     Buenos Aires, il joue au poste de milieu droit à Bota. Il joue son 
                     premier match en sélection le 24 septembre 2022 lor d'un amical face au Honduras.</div>
                 <div class="carousel-slide">
                     <h2>17 - Alejandro Gómez</h2>
-                    <img src="./Images/Equipe/17 Gomez 02 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/17 Gomez 02 avec arrière-plan supprimé.png"
+                    alt="Alejandro Gómez">
                     "Papu", 
                     né le 15 février 1988 à Buenos Aires, il évolue au poste d'attaquant ou de milieu 
                     offensif. Le 19 mai 2017, il honore sa première sélection avec l'Argentine 
                     face à Singapour.</div>
                 <div class="carousel-slide">
                     <h2>18 - Guido Rodríguez</h2>
-                    <img src="./Images/Equipe/18 Rodriguez 03 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/18 Rodriguez 03 avec arrière-plan supprimé.png"
+                    alt="Guido Rodríguez">
                     Né le 12 avril 
                     1994 à Sáenz Peña, il évolue au poste de milieu défensif à 
                     West Ham United. Le 9 juin 2017, Rodriguez honore sa première sélection 
@@ -182,21 +202,24 @@
                 </div>
                 <div class="carousel-slide">
                     <h2>19 - Nicolás Otamendi</h2>
-                    <img src="./Images/Equipe/19 Otamendi 02 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/19 Otamendi 02 avec arrière-plan supprimé.png"
+                    alt="Nicolás Otamendi">
                     Né le 12 février 
                     1988 à Buenos Aires, il évolue au poste de défenseur central au 
                     Benfica Lisbonne. Il reçoit sa première sélection en équipe d'Argentine 
                     le 20 mai 2009 contre le Panama.</div>
                 <div class="carousel-slide">
                     <h2>20 - Alexis MacAllister</h2>
-                    <img src="./Images/Equipe/20 Mac Allister 02 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/20 Mac Allister 02 avec arrière-plan supprimé.png"
+                    alt="Alexis MacAllister">
                     Né le 24 décembre 
                     1998 à Santa Rosa, il évolue au poste de milieu de terrain au Liverpool 
                     FC. Il honore sa première sélection le 6 septembre 2019, lors d'un match 
                     face au Chili.</div>
                 <div class="carousel-slide">
                     <h2>21 - Paulo Dybala</h2>
-                    <img src="./Images/Equipe/21 Dybala 02 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/21 Dybala 02 avec arrière-plan supprimé.png"
+                    alt="Paulo Dybala">
                     Né le 15 novembre 
                     1993 à Laguna Larga, il joue au poste 
                     d'attaquant à l'AS Rome. Il dispute son premier match sous les couleurs 
@@ -204,7 +227,8 @@
                 </div>
                 <div class="carousel-slide">
                     <h2>22 - Lautaro Martínez</h2>
-                    <img src="./Images/Equipe/22 Lautaro Martinez 01 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/22 Lautaro Martinez 01 avec arrière-plan supprimé.png"
+                    alt="Lautaro Martínez">
                     "El Toro" 
                     né le 22 août 1997 à Bahía Blanca, il évolue au poste d'attaquant 
                     à l'Inter Milan. Le 23 mars 2018, Martínez fait ses débuts avec l'Argentine contre 
@@ -212,28 +236,32 @@
                 </div>
                 <div class="carousel-slide">
                     <h2>23 - Emiliano Martínez</h2>
-                    <img src="./Images/Equipe/23 Emiliano Martinez 06 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/23 Emiliano Martinez 06 avec arrière-plan supprimé.png"
+                    alt="Emiliano Martínez">
                     "Dibu" né le 2 septembre 1992 à Mar del Plata, évolue au poste de 
                     gardien de but à Aston Villa. Il est sélectionné pour la première fois avec 
                     l'Argentine en 2021 pour la Copa América.
                     </div>
                 <div class="carousel-slide">
                     <h2>24 - Enzo Fernández</h2>
-                    <img src="./Images/Equipe/24 Fernandez 01 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/24 Fernandez 01 avec arrière-plan supprimé.png"
+                    alt="Enzo Fernández">
                     Né le 17 janvier 
                     2001 à San Martín, il évolue actuellement au poste de milieu de 
                     terrain au Chelsea FC. En novembre 2021, il est convoqué pour la première 
                     fois avec l'équipe nationale d'Argentine.</div>
                 <div class="carousel-slide">
                     <h2>25 - Lisandro Martínez</h2>
-                    <img src="./Images/Equipe/25 Lisandro Martinez 01 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/25 Lisandro Martinez 01 avec arrière-plan supprimé.png"
+                    alt="Lisandro Martínez">
                     Né le 18 
                     janvier 1998 à Gualeguay, il évolue au poste de défenseur central à 
                     Manchester United. En mars 2019, il fait partie de la liste des 30 joueurs retenus 
                     par Scaloni.</div>
                 <div class="carousel-slide">
                     <h2>26 - Nahuel Molina</h2>
-                    <img src="./Images/Equipe/26 Molina 02 avec arrière-plan supprimé.png">
+                    <img src="./Images/Equipe/26 Molina 02 avec arrière-plan supprimé.png"
+                    alt="Nahuel Molina">
                     Né le 6 avril 1998 
                     à Embalse, il évolue au poste d'arrière droit à l'Atlético de Madrid. 
                     Il honore sa première sélection avec l'équipe nationale d'Argentine le 4 juin 2021 
@@ -348,7 +376,7 @@
                         
                 <article class="finale">
                     <h3>Finale de la Coupe du monde 2022</h3>
-                    <img src="./Images/france.jpg" alt="3-0 pour l'Argentine" 
+                    <img src="./Images/france.jpg" alt="4-2 aux pénalties pour l'Argentine" 
                     class="paysage right">
                     <p>Le 18 décembre 2022, au stade de Lusail, l'Argentine dispute la finale 
                         contre la France, championne en titre. 
@@ -428,6 +456,25 @@
                         <li><a href="histoire.html">Un peu d'histoire</a></li>
                         <li><a href="worldcup.html">FIFA World Cup 2022</a></li>
                         <li><a href="phenomene.html">Le phénomène social</a></li>
+                    </ul>
+                </article>
+
+                <article class="menuReseaux">
+                    <ul class="icon">
+                        <li><a href="https://www.afa.com.ar/es/" target="_blank"><img 
+                            src="./Images/afa.png" alt="logo Afa" class="redes"></a></li>
+                        <li><a href="https://www.conmebol.com/" target="_blank"><img 
+                            src="./Images/conmebol.png" alt="logo Conmebol" class="redes"></a></li>
+                        <li><a href="https://www.instagram.com/afaseleccion/" target="_blank"><img 
+                            src="./Images/instagram.svg" alt="logo Instagram" class="redes"></a></li>
+                    </ul>
+                    <ul class="icon">
+                        <li><a href="https://www.facebook.com/AFASeleccionArgentina" target="_blank"><img 
+                            src="./Images/facebook.svg" alt="logo Facebook" class="redes"></a></li>
+                        <li><a href="https://www.youtube.com/@AFASeleccion" target="_blank"><img 
+                            src="./Images/youtube.svg" alt="logo Youtube" class="redes"></a></li>
+                        <li><a href="https://www.tiktok.com/@afaseleccion" target="_blank"><img 
+                            src="./Images/tiktok.svg" alt="logo Tiktok" class="redes"></a></li>
                     </ul>
                 </article>
 
