ajout des liens de l'euromillion dans la bio et le footer

--- a/index.html
+++ b/index.html
@@ -77,26 +77,32 @@
                     <p class="bordure-decalee"><img src="./images/resultat-tirage-euromillions-vendredi-22-novembre-2024.jpg" alt="Image de l'EuroMillions"></p>
                     <div class="contenu">
                         <h2>EuroMillions</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Integer lectus nisl, hendrerit eu ornare et, mollis ut tellus.
-                            Vivamus nec mauris id nisl tincidunt suscipit id vel eros.
-                            Fusce ac egestas sapien. Phasellus in lorem ac turpis laoreet
-                            consectetur quis suscipit orci. Pellentesque consequat vulputate ligula,
-                            vitae fringilla nisl. Suspendisse aliquet arcu et nisi rhoncus consectetur.
+                        <p>
+                            L’EuroMillions est une loterie européenne lancée en 2004, 
+                            réunissant plusieurs pays : France, Espagne, Royaume-Uni, Portugal,
+                             Belgique, Suisse, Autriche, Irlande et Luxembourg. 
+                             Les joueurs doivent choisir 5 numéros entre 1 et 50, ainsi que 2 étoiles entre 1 et 12. 
+                             Un tirage a lieu deux fois par semaine, le mardi et le vendredi, 
+                             et le jackpot démarre à 17 millions d'euros, 
+                             pouvant atteindre jusqu'à 240 millions d'euros ou plus, selon les règles actuelles. 
+                             Une partie des mises contribue à des actions sociales et culturelles dans les pays participants.
                         </p>
                         <p>
-                            Phasellus viverra quam ut pretium volutpat. Etiam felis nulla, tincidunt
-                            eget molestie id, finibus eu orci. Fusce fermentum ullamcorper purus non suscipit.
-                            Ut vel sapien a lectus ornare cursus nec a elit. Maecenas ac diam id nisl elementum
-                            iaculis pulvinar vitae arcu. Donec interdum varius nisi sed egestas. Maecenas luctus
-                            ullamcorper erat, eu congue dolor accumsan ut. Curabitur accumsan lectus eros,
-                            eu accumsan leo consequat vitae. Praesent dignissim dolor risus, bibendum gravida
-                            enim efficitur non. Duis venenatis bibendum tellus eget volutpat.
+                            En plus de son aspect ludique, l'EuroMillions attire de nombreux joueurs grâce à ses jackpots exceptionnels, 
+                            qui augmentent en cas d'absence de gagnants au tirage principal. 
+                            Il existe également des gains secondaires pour ceux qui trouvent une combinaison partielle des numéros et étoiles. 
+                            En France, chaque ticket acheté inclut automatiquement une participation
+                             à un tirage parallèle appelé "My Million", où un joueur remporte un million d'euros à chaque tirage. 
+                             L'EuroMillions est ainsi non seulement une source de divertissement, 
+                             mais aussi une opportunité de rêver à une transformation de vie, 
+                             tout en soutenant des causes d'intérêt général grâce aux fonds reversés. 
+                             Cependant, il est important de jouer de manière responsable, 
+                             car les chances de décrocher le jackpot sont extrêmement faibles (environ 1 sur 139 millions).
                         </p>
                         <div class="lien">
-                            <button type="button"><a href="#">Lien 1</a></button>
-                            <button type="button"><a href="#">Lien 2</a></button>
-                            <button type="button"><a href="#">Lien 3</a></button>
+                            <button type="button"><a href="./fansite2.html">Accueil</a></button>
+                            <button type="button"><a href="./jeux.html">Nos Jeux</a></button>
+                            <button type="button"><a href="./resultats.html">Les Résultats</a></button>
                         </div>
                     </div>
                 </article>
@@ -153,10 +159,10 @@
                 <article class="menuEuroMillions">
                     <h2>EuroMillions</h2>
                     <ul>
-                        <li><a href="fansite2.html">Accueil</a></li>
-                        <li><a href="">Lien 1</a></li>
-                        <li><a href="">Lien 2</a></li>
-                        <li><a href="">Lien 3</a></li>
+                        <li><a href="./fansite2.html">Accueil</a></li>
+                        <li><a href="./jeux.html">Nos Jeux</a></li>
+                        <li><a href="./numéros-maudits.html">Les Numéros Maudits</a></li>
+                        <li><a href="./resultats.html">Les Résultats</a></li>
                     </ul>
                 </article>
                 <article class="menuScaloneta">
