Ajout des liens du fansite euromillion dans les footers du fansite Blackpink

--- a/contact.html
+++ b/contact.html
@@ -136,12 +136,12 @@
             </article>
             <article class="menuEuroMillions">
                 <h2>EuroMillions</h2>
-                <ul>
-                    <li><a href="fansite2.html">Accueil</a></li>
-                    <li><a href="">Lien 1</a></li>
-                    <li><a href="">Lien 2</a></li>
-                    <li><a href="">Lien 3</a></li>
-                </ul>
+                    <ul>
+                        <li><a href="./fansite2.html">Accueil</a></li>
+                        <li><a href="./jeux.html">Nos Jeux</a></li>
+                        <li><a href="./numéros-maudits.html">Les Numéros Maudits</a></li>
+                        <li><a href="./resultats.html">Les Résultats</a></li>
+                    </ul>
             </article>
             <article class="menuScaloneta">
                 <h2>La Scaloneta</h2>
