--- a/fansite1-membres.html
+++ b/fansite1-membres.html
@@ -228,12 +228,12 @@
             </article>
             <article class="menuEuroMillions">
                 <h2>EuroMillions</h2>
-                <ul>
-                    <li>Accueil</li>
-                    <li>Lien 1</li>
-                    <li>Lien 2</li>
-                    <li>Lien 3</li>
-                </ul>
+                    <ul>
+                        <li><a href="./fansite2.html">Accueil</a></li>
+                        <li><a href="./jeux.html">Nos Jeux</a></li>
+                        <li><a href="./numéros-maudits.html">Les Numéros Maudits</a></li>
+                        <li><a href="./resultats.html">Les Résultats</a></li>
+                    </ul>
             </article>
             <article class="menuScaloneta">
                 <h2>La Scaloneta</h2>
