--- a/fansite2.html
+++ b/fansite2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fansite</title>
-    <link href="style.css" rel="stylesheet"> <!-- Lien vers ton fichier CSS -->
+    <link href="fansite2.css" rel="stylesheet"> <!-- Lien vers ton fichier CSS -->
 </head>
 <body>
     <header>
