--- a/resultats.html
+++ b/resultats.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Consultez les derniers résultats des tirages EuroMillions avec les numéros gagnants, le jackpot et les gagnants.">
     <title>Résultats EuroMillions</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="fansite2.css" rel="stylesheet">
 </head>
 <body class="results-page">
 
