rajout des images des jeux

--- a/jeux.html
+++ b/jeux.html
@@ -16,7 +16,7 @@
         <!-- Image 1 avec titre -->
         <figure>
             <a href="https://www.fdj.fr/jeux-de-tirage/euromillions-my-million?board=0" target="_blank">
-                <img src="image/jeux1.2.png" alt="Euromillions" class="clickable-image">
+                <img src="./images/jeux1.2.png" alt="Euromillions" class="clickable-image">
             </a>
             <figcaption>Euromillions</figcaption> <!-- Titre sous l'image -->
         </figure>
@@ -24,7 +24,7 @@
         <!-- Image 2 avec titre -->
         <figure>
             <a href="https://www.fdj.fr/jeux-de-tirage/euromillions-my-million/multichances" target="_blank">
-                <img src="image/jeux2.1png.png" alt="Multichances EuroMillions" class="clickable-image">
+                <img src="./images/jeux2.1png.png" alt="Multichances EuroMillions" class="clickable-image">
             </a>
             <figcaption>Multichances EuroMillions</figcaption> <!-- Titre sous l'image -->
         </figure>
@@ -32,7 +32,7 @@
         <!-- Image 3 avec titre -->
         <figure>
             <a href="https://www.fdj.fr/jeux-de-tirage/euromillions-my-million/multichances" target="_blank">
-                <img src="image/jeux3.1.png" alt="Jeux Multichances" class="clickable-image">
+                <img src="./images/jeux3.1.png" alt="Jeux Multichances" class="clickable-image">
             </a>
             <figcaption>Jeux Multichances</figcaption> <!-- Titre sous l'image -->
         </figure>
