correction de la description de Limonade

--- a/index.html
+++ b/index.html
@@ -44,10 +44,16 @@
             <section>
                     <header>
                         <h1>Limonade</h1>
-                        <p>Bienvenue sur le fansite d'<span class="blackpink">Adeline</span>, <span class="euro">Maeva</span> et <span class="Scaloneta">Noa</span>. Nous allons
-                            vous présenter briévement nos trois sujets sur cette page.</p>
-                        <p>Le nom de notre fansite est LIMONADE, ce mot utilise toutes les lettres de nos prénoms sauf le V.
-                            Nous avons utilisé Trello pour nous répartir les tâches et git/github pour partager notre travail.
+                        <p>Bienvenue sur le fansite d'<span class="blackpink">Adeline</span>, <span class="euro">Maeva</span> et <span class="Scaloneta">Noa</span>. 
+                            Nous avons appelé notre fansite LIMONADE, mélangeant ainsi toutes les lettres de nos prénoms (sauf le V).
+                        </p>
+                        <p>
+                            Adeline est fan de Blackpink, un groupe coréen de Kpop, Maeva est fan de l'EuroMillions,
+                            la loterie européenne, Noa est fan de la Scaloneta, l'équipe nationale de football de
+                            l'Argentine.
+                        </p>
+                        <p>
+                            Bienvenue dans nos mondes !
                         </p>
                     </header>
                 <article class="blackpink">
